syntax = "proto3";

package com.example.internalapi.request.journal.get_all_by_user_id.proto;

option java_multiple_files = true;

import "com/example/internalapi/model/journal.proto";

message GetAllJournalsByUserIdRequest {
  string user_id = 1;
}

message GetAllJournalsByUserIdResponse {
  oneof response {
    Success success = 1;
  }

  message Success {
    example.internalapi.model.JournalList journals = 1;
  }
}
