syntax = "proto3";

package com.example.internalapi;

import "com/example/internalapi/input/reqreply/journal/get_all_by_user_id.proto";

service JournalService {
  rpc getAllByUserId(com.example.internalapi.request.journal.get_all_by_user_id.proto.GetAllJournalsByUserIdRequest)
      returns (com.example.internalapi.request.journal.get_all_by_user_id.proto.GetAllJournalsByUserIdResponse);
}
